--- a/ProyectoFinal/Views/Perfiles/Listar.cshtml
+++ b/ProyectoFinal/Views/Perfiles/Listar.cshtml
@@ -32,8 +32,8 @@
                         <td>@item.PERFILES_CODIGO</td>
                         <td>@item.DETALLE</td>
                         <td>
-                            <a asp-action="Editar" asp-controller="Perfiles" class="btn-primary btn-sm" asp-route-id="@item.PERFILES_CODIGO">Editar</a>
-                            <a asp-action="Eliminar" asp-controller="Perfiles" class="btn-primary btn-sm" asp-route-id="@item.PERFILES_CODIGO">Eliminar</a>
+                            <a asp-action="Editar" asp-controller="Perfiles" class="btn-primary btn-sm" asp-route-id="@item.PERFILES_CODIGO"><img src="~/img/pencil-square.svg" /></a>
+                            <a asp-action="Eliminar" asp-controller="Perfiles" class="btn-danger btn-sm" asp-route-id="@item.PERFILES_CODIGO"><img src="~/img/trash-fill.svg" /></a>
                         </td>
                     </tr>
                 }
