--- a/ProyectoFinal/Views/Usuarios/Listar.cshtml
+++ b/ProyectoFinal/Views/Usuarios/Listar.cshtml
@@ -20,7 +20,8 @@
                 <tr>
 
                     <th>Usuario codigo</th>
-                    <th>Perfil codigo</th>
+                    <th>Correo</th>
+                    <th>Contraseña</th>
                     <th>Funciones</th>
 
                 </tr>
@@ -30,7 +31,8 @@
                 {
                     <tr>
                         <td>@item.USUARIOS_CODIGO</td>
-                        <td>@item.PERFILES_CODIGO</td>
+                        <td>@item.CORREO</td>
+                        <td>@item.CONTRASENIA</td>
                         <td>
                             <a asp-action="Editar" asp-controller="Usuarios" class="btn-primary btn-sm" asp-route-id="@item.USUARIOS_CODIGO"><img src="~/img/pencil-square.svg" /></a>
                             <a asp-action="Eliminar" asp-controller="Usuarios" class="btn-danger btn-sm" asp-route-id="@item.USUARIOS_CODIGO"><img src="~/img/trash-fill.svg" /></a>
