--- a/ProyectoFinal/Views/Usuarios/GuardarForm.cshtml
+++ b/ProyectoFinal/Views/Usuarios/GuardarForm.cshtml
@@ -11,8 +11,12 @@
     <div class="card-body">
         <form asp-action="GuardarForm" asp-controller="Usuarios" method="post">
             <div class="mb-3">
-                <label class="form-label">Perfil codigo</label>
-                <input asp-for="PERFILES_CODIGO" type="number" class="form-control">
+                <label class="form-label">Correo</label>
+                <input asp-for="CORREO" type="text" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Contraseña</label>
+                <input asp-for="CONTRASENIA" type="text" class="form-control">
             </div>
             <button asp-action="GuardarForm" asp-controller="Usuarios" type="submit" class="btn btn-primary">Guardar</button>
             <a asp-action="Listar" asp-controller="Usuarios" class="btn btn-warning">Volver al listado</a>
