--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Tienda MVC</a>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Acceso" asp-action="Logout">Logout</a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,6 +24,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Acceso" asp-action="Logout">Logout</a>
+                        </li>
+                        
                         <li class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav text-dark">
                                 <li class="nav-item dropdown">
@@ -43,7 +47,6 @@
                     </ul>
                 </div>
             </div>
-     
             <div class="collapse navbar-collapse text-dark" id="navbarNavDropdown">
                 <ul class="navbar-nav text-dark">
                     <li class="nav-item dropdown">
@@ -73,6 +76,8 @@
                     </li>
                 </ul>
             </div>
+     
+            
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Busqueda" aria-label="Search">
                 <button class="btn btn-outline-dark btn-sm" type="submit"><img src="~/img/search.svg" /></button>
