--- a/ProyectoFinal/Views/Home/Index.cshtml
+++ b/ProyectoFinal/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
