Vista productos terminada

--- a/ProyectoFinal/Views/Home/Index.cshtml
+++ b/ProyectoFinal/Views/Home/Index.cshtml
@@ -10,13 +10,13 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://images.fravega.com/f300/a08632e54202748a21ec4ef24719eed2.png.webp" class="d-block w-100" alt="...">
+            <img src="~/img/carrousel1.webp" class="d-block w-100" alt="..."/>
         </div>
         <div class="carousel-item">
-            <img src="https://images.fravega.com/f300/7ef93483949175d4deca9b441c27e183.jpg.webp" class="d-block w-100" alt="...">
+           <img src="~/img/carrousel2.webp"  class="d-block w-100" alt="..."/>
         </div>
         <div class="carousel-item">
-            <img src="https://images.fravega.com/f300/eb7f3d659c4f7f3d42764f5e2e9815f0.jpg.webp" class="d-block w-100" alt="...">
+           <img src="~/img/carrousel3.webp" class="d-block w-100" alt="..."/>
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
@@ -30,9 +30,7 @@
 </div>
 
 <br />
-<div class="container marketing">
-
-    
+<div class="container marketing"> 
     <div class="row">
         <div class="col-lg-3">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
