--- a/ProyectoFinal/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinal/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Tienda MVC</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/navbar.png" /> </a>
                 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -27,6 +27,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Acceso" asp-action="Logout">Logout</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Productos" asp-action="Index">Productos</a>
+                        </li>
+
+                       
                         
                         <li class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav text-dark">
@@ -39,7 +44,7 @@
                                         <li><a class="dropdown-item" href="#">Celulares, Notebook y Tecnologia</a></li>
                                         <li><a class="dropdown-item" href="#">Hogar, Muebles y Jardin</a></li>
                                         <li><a class="dropdown-item" href="#">Electrodomesticos y Aires Acc</a></li>
-                                        <li><a class="dropdown-item" href="#">Todas las categorias</a></li>
+                                       
                                     </ul>
                                 </li>
                             </ul>
