Index de productos

--- a/ProyectoFinal/Views/Productos/Index.cshtml
+++ b/ProyectoFinal/Views/Productos/Index.cshtml
@@ -74,7 +74,7 @@
         <div class="card">
             <img src="~/img/samsungzfold.webp" />
             <div class="card-body">
-                <h5 class="card-title">Samsung Galaxy Z Fold 4 Negro 256GB</h5>
+                <h5 class="card-title">Samsung Galaxy Z Fold 4</h5>
                 <h6 class="card-text">$450.000</h6>
             </div>
         </div>
@@ -83,7 +83,7 @@
         <div class="card">
             <img src="~/img/xiaomi.webp" />
             <div class="card-body">
-                <h5 class="card-title">Xiaomi Redmi Note 11 Pro 8GB 128GB</h5>
+                <h5 class="card-title">Xiaomi Redmi Note 11 Pro 8GB</h5>
                 <h6 class="card-text">$350.000</h6>
             </div>
         </div>
