cambios de front

--- a/ProyectoFinal/Views/Home/Index.cshtml
+++ b/ProyectoFinal/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home";
 }
-
+<link href="~/css/index.css" rel="stylesheet" />
 <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -30,35 +30,41 @@
 </div>
 
 <br />
-<div class="container marketing"> 
+
+<div class="container "> 
     <div class="row">
-        <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <h3>¡Encontra las mejores marcas!</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card">
+                    <img src="~/img/indexcarrousel.webp" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col">
+                <div class="card">
+                    <img src="~/img/apple.webp" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                </div>
+            </div>
+             <div class="col">
+                <div class="card">
+                    <img src="~/img/indexcarrousel3.jpg" />
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-            <h2 class="fw-normal">Televisores</h2>
-            <p>Bla Bla Bla Bla Bla</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-            <h2 class="fw-normal">Celulares</h2>
-            <p>Bla Bla Bla Bla Bla</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-            <h2 class="fw-normal">Computadoras</h2>
-            <p>Bla Bla Bla Bla Bla</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2 class="fw-normal">Muebles</h2>
-            <p>Bla Bla Bla Bla Bla</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-        </div>
     </div>
     
 
@@ -66,39 +72,31 @@
 
     <div class="row featurette">
         <div class="col-md-7">
-            <h2 class="featurette-heading fw-normal lh-1">OFERTAS POR TIEMPO LIMITADO<span class="text-muted"></span></h2>
-            <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
-        </div>
-        <div class="col-md-5">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
-        </div>
+            <h4 class="featurette-heading fw-normal lh-1">¿Porque comprar con nosotros?<span class="text-muted"></span></h4>
+            <p class="lead">Tienes muchos beneficios, como envíos gratuitos en productos elegibles, entregas el mismo día, descuentos y eventos exclusivos</p>
+            <img src="~/img/niño gamer.jpg" id="fotogamer" />
+        </div>   
     </div>
 
     <hr class="featurette-divider">
 
     <div class="row featurette">
         <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
-        </div>
-        <div class="col-md-5 order-md-1">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+            <h2 class="featurette-heading fw-normal lh-1">Contamos con envios a todo el pais!</h2>
+            <p class="lead">
+                Todos tus paquetes están asegurados. Si hay algún imprevisto, te cubrimos. Vos y el comprador pueden acompañar el envío todo el tiempo
+            </p>
+            <img src="~/img/envios.jpg"  id="fotoenvio"/>
         </div>
     </div>
 
     <hr class="featurette-divider">
 
     <div class="row featurette">
-        <div class="col-md-7">
-            <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
-        </div>
-        <div class="col-md-5">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
 
-        </div>
+        <h4>joaoc mete un boton que te mande a la vista de productos
+        </h4>
+        
     </div>
     <hr class="featurette-divider">    
 </div>
