--- a/ProyectoFinal/Views/Productos/Index.cshtml
+++ b/ProyectoFinal/Views/Productos/Index.cshtml
@@ -13,6 +13,7 @@
             <div class="card-body">
                 <h5 class="card-title">Smart TV Full HD Samsung 43"</h5>
                 <h6 class="card-text">$90.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
             </div>
         </div>
     </div>
@@ -22,6 +23,7 @@
             <div class="card-body">
                 <h5 class="card-title">Smart TV LED" 32 Noblex</h5>
                 <h6 class="card-text">$60.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
             </div>
         </div>
     </div>
@@ -29,8 +31,9 @@
         <div class="card">
             <img src="~/img/televisor32segundo.webp" />
             <div class="card-body">
-                <h5 class="card-title">Smart TV Admiral 65" 4K UHD</h5>
+                <h5 class="card-title">Smart TV Admiral 32" 4K UHD</h5>
                 <h6 class="card-text">$150.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
             </div>
         </div>
     </div>
@@ -40,6 +43,7 @@
             <div class="card-body">
                 <h5 class="card-title">MacBook Air 13" M1 Chip 8-core</h5>
                 <h6 class="card-text">$850.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
             </div>
         </div>
     </div>
@@ -47,8 +51,9 @@
         <div class="card">
             <img src="~/img/notebookgigabyte.webp" />
             <div class="card-body">
-                <h5 class="card-title">Notebook Asus Rog Zephyrus G14 14"</h5>
+                <h5 class="card-title">Notebook Asus Rog Zephyrus G14</h5>
                 <h6 class="card-text">$550.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
             </div>
         </div>
     </div>
@@ -56,8 +61,9 @@
         <div class="card">
             <img src="~/img/notebookthinkpad.webp" />
             <div class="card-body">
-                <h5 class="card-title">Notebook Lenovo 14" Core i5 8GB RAM</h5>
+                <h5 class="card-title">Notebook Lenovo 14" Core i5 8GB</h5>
                 <h6 class="card-text">$350.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
             </div>
         </div>
     </div>
@@ -67,6 +73,7 @@
             <div class="card-body">
                 <h5 class="card-title">iPhone 13 129GB Black</h5>
                 <h6 class="card-text">$750.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
             </div>
         </div>
     </div>
@@ -76,6 +83,7 @@
             <div class="card-body">
                 <h5 class="card-title">Samsung Galaxy Z Fold 4</h5>
                 <h6 class="card-text">$450.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
             </div>
         </div>
     </div>
@@ -85,6 +93,37 @@
             <div class="card-body">
                 <h5 class="card-title">Xiaomi Redmi Note 11 Pro 8GB</h5>
                 <h6 class="card-text">$350.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="~/img/play5.webp" />
+            <div class="card-body">
+                <h5 class="card-title">Sony PlayStation 5 PS5</h5>
+                <h6 class="card-text">$340.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="~/img/xbox.webp" />
+            <div class="card-body">
+                <h5 class="card-title">Xbox Serie X</h5>
+                <h6 class="card-text">$220.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="~/img/consolaretro.webp" />
+            <div class="card-body">
+                <h5 class="card-title">Consola Retro Boy X</h5>
+                <h6 class="card-text">$18.000</h6>
+                <button type="button" class="btn btn-success btn-sm">Comprar</button>
             </div>
         </div>
     </div>
