--- a/ProyectoFinal/Views/Home/Index.cshtml
+++ b/ProyectoFinal/Views/Home/Index.cshtml
@@ -10,13 +10,13 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="~/img/carrousel1.webp" class="d-block w-100" alt="..."/>
+            <img src="~/img/carrousel1.webp" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-           <img src="~/img/carrousel2.webp"  class="d-block w-100" alt="..."/>
+            <img src="~/img/carrousel2.webp" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-           <img src="~/img/carrousel3.webp" class="d-block w-100" alt="..."/>
+            <img src="~/img/carrousel3.webp" class="d-block w-100" alt="..." />
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
@@ -31,7 +31,7 @@
 
 <br />
 
-<div class="container "> 
+<div class="container">
     <div class="row">
         <h3>¡Encontra las mejores marcas!</h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="col">
                 <div class="card">
                     <img src="~/img/apple.webp" />
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-             <div class="col">
+            <div class="col">
                 <div class="card">
                     <img src="~/img/indexcarrousel3.jpg" />
                     <div class="card-body">
@@ -66,37 +66,36 @@
         </div>
 
     </div>
+
+
+    <hr class="featurette-divider">    
+        <div class="row featurette" id="imagenes">
+            <div class="col-md-7">
+                <h4 class="featurette-heading fw-normal lh-1">¿Por qué comprar con nosotros?<span class="text-muted"></span></h4>
+                <p class="lead">Tienes muchos beneficios como: ¡envíos gratuitos en productos elegibles, entregas el mismo día, descuentos y eventos exclusivos!</p>
+                <img src="~/img/niño gamer.jpg" id="fotogamer" />
+            </div>
+        </div>
     
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h4 class="featurette-heading fw-normal lh-1">¿Porque comprar con nosotros?<span class="text-muted"></span></h4>
-            <p class="lead">Tienes muchos beneficios, como envíos gratuitos en productos elegibles, entregas el mismo día, descuentos y eventos exclusivos</p>
-            <img src="~/img/niño gamer.jpg" id="fotogamer" />
-        </div>   
-    </div>
 
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-        <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading fw-normal lh-1">Contamos con envios a todo el pais!</h2>
-            <p class="lead">
-                Todos tus paquetes están asegurados. Si hay algún imprevisto, te cubrimos. Vos y el comprador pueden acompañar el envío todo el tiempo
-            </p>
-            <img src="~/img/envios.jpg"  id="fotoenvio"/>
+    <div class="row featurette" id="imagenes">
+            <div class="col-md-7 order-md-2">
+                <h2 class="featurette-heading fw-normal lh-1">¡Contamos con envios a todo el pais!</h2>
+                <p class="lead">
+                    Todos tus paquetes están asegurados. Si hay algún imprevisto, te cubrimos. Vos y el comprador pueden acompañar el envío todo el tiempo.
+                </p>
+                <img src="~/img/envios.jpg" id="fotoenvio" />
+            </div>
         </div>
-    </div>
+    
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <a class="btn btn-primary" href="/Productos" role="button">Ir a productos</a>
 
-        <h4>joaoc mete un boton que te mande a la vista de productos
-        </h4>
-        
-    </div>
-    <hr class="featurette-divider">    
+    <hr class="featurette-divider">
+
 </div>
